--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,7 @@
+server:
+  servlet:
+    session:
+      timeout: 1h
 spring:
   cache:
     port: 8081
@@ -78,7 +82,7 @@ cors:
 
 app:
   auth:
-    tokenExpiry: 1800000
+    tokenExpiry: 3600000
     refreshTokenExpiry: 604800000
   oauth2:
     authorizedRedirectUris:
