--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -114,4 +114,4 @@ logging:
     console: "[%d{yyyy-MM-dd HH:mm:ss.SSS}][%thread][%-5level] %logger{50} - %msg%n"
     file: "[%d{yyyy-MM-dd HH:mm:ss.SSS}][%thread][%-5level] %logger{50} - %msg%n"
   level:
-    root: info
+    root: DEBUG
