logging level 조정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -115,5 +115,5 @@ logging:
     console: "[%d{yyyy-MM-dd HH:mm:ss.SSS}][%thread][%-5level] %logger{50} - %msg%n"
     file: "[%d{yyyy-MM-dd HH:mm:ss.SSS}][%thread][%-5level] %logger{50} - %msg%n"
   level:
-    root: DEBUG
-    org.hibernate.orm.jdbc.bind: trace
+    org.hibernate.orm.jdbc.bind: TRACE
+    io.swagger.v3.core.converter: WARN
