--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,7 @@ server:
         same-site: strict
         http-only: true
         path: /
+        secure: true
       timeout: 3600
 spring:
   cache:
